Fix vertical overflow bug

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -21,7 +21,7 @@
 
 html,
 body {
-    height: 100%;
+    min-height: 100%;
 }
 
 body {
